[package]
name = "tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
poem = { version = "3.1.10", features = ["websocket"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "full"] }
tracing-subscriber = "0.3"
tracer_macros = { path = "../tracer_macros" }
serde_json = "1.0.140"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
poem-openapi = { version = "5.1.14", features = ["openapi-explorer"] }
